--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8">
-<title>vcrontab demo</title>
-<script src="./vcrontab.umd.js"></script>
-<link rel="stylesheet" href="./vcrontab.css">
+<title>vueCronCustom demo</title>
+<script src="./vueCronCustom.umd.js"></script>
+<link rel="stylesheet" href="./vueCronCustom.css">
 
 <script>
-console.log(vcrontab)
+console.log(vueCronCustom)
 </script>
